--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.11.1
 MarkupSafe==1.1.1
 packaging==20.1
 pyparsing==2.4.6
+pyjwt==1.7.1
 python-dateutil==2.8.1
 pytz==2019.3
 qrcode==6.1
