--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "parse-link-header": "^1.0.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
