--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "chart.js": "^2.9.3",
+    "chartjs-adapter-luxon": "^0.2.2",
     "luxon": "^1.25.0",
     "parse-link-header": "^1.0.1",
     "qrcode.react": "^1.0.0",
