--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -15,7 +15,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
